--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "element-ui": "^2.4.11",
     "vue": "^2.5.2",
+    "vue-clipboard2": "^0.2.1",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
